<resources>
    <!-- Strings for Intro Slider Screen -->

    <!--Titles-->
    <string name="first_slide_title">Go Digital</string>
    <string name="second_slide_title">Collaborate better</string>
    <string name="third_slide_title">Complete package</string>
    <string name="fourth_slide_title">Make your things easier</string>

    <!--Descriptions-->
    <string name="first_slide_desc">Now you can get instant notification\n about happenings in the GBU campus. </string>
    <string name="second_slide_desc">Platform provides opppotunity to share \n academic stuff in an efficient manner.</string>
    <string name="third_slide_desc"> e-Learning, Timetables, course structures and\n syllabuses , Results , internal evaluations in one go.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the\n app in your pocket then you don\'t have to worry\n about anything It will evolve  with changing needs.  </string>


    <string name="app_name">Sampurna GBU</string>
    <string name="login_button">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="post_title"> </string>
    <string name="post_description"> </string>
    <string name="submit_post">Submit Post</string>
    <string name="hint_title">Title</string>
    <string name="hint_desciption">Description</string>
    <string name="post_title_row">Post Title</string>
    <string name="Description_row">Description</string>
    <string name="date_created_row">Date Created:</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Enter Password </string>
    <string name="sampurna_GBU"> SAMPURNA GBU</string>
    <string name="tag_line">A complete solution!</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!-- Strings for Internals Evaluation  -->

    <string name="internal_evaluation">Internals Evaluation</string>

    <!-- Strings for Dashboard  -->

    <string name="logo_name">Sampurna GBU</string>

    <!--Categories-->
    <string name="timetable">Timetable</string>
    <string name="courses">Courses</string>
    <string name="grievances">grievances</string>
    <string name="internals">Internals</string>
    <string name="airports">Airports</string>

    <!--Titles and Descriptions-->
    <string name="notice_board">Notice Board</string>
    <string name="notice_board_desc">All the happenings in the campus are broadcasted here,\nCheck out individual Departments to be updated. </string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!--Alert Dialog for signout-->
    <string name="ttile">ATTENTION!</string>
    <string name="message">Are you sure you want to leave ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <!--Phone no verificartion -->
    <string name="code">CODE</string>
    <string name="code_verification">Verification</string>
    <string name="code_desc">Enter the One Time Password sent on your mobile number</string>



    <!--Phone nos for emergency activities-->
    <string name="hostel_admin_no">9650958477</string>
    <string name="gbu_admin_no">9871200370</string>
    <string name="fire_services_no">112</string>
    <string name="health_services_no">102</string>
    <string name="Securities_no">100</string>
</resources>
