<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:padding="10sp"
    android:layout_marginLeft="15dp"
    android:paddingBottom="10dp"
    android:layout_marginRight="15dp"
    app:layout_goneMarginBottom="10dp"
    app:layout_goneMarginTop="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/postImageList"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="center"
                />

            <TextView
                android:id="@+id/postTitleList"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:paddingLeft="10sp"
                android:text="@string/post_title_row"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/postDescroptionList"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:text="@string/Description_row" />

            <TextView
                android:id="@+id/timestampList"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10sp"
                android:text="@string/date_created_row"
                android:textStyle="italic" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

