<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:padding="10sp"
    android:layout_marginLeft="15dp"
    android:paddingBottom="10dp"
    android:layout_marginRight="15dp"
    app:layout_goneMarginBottom="10dp"
    app:layout_goneMarginTop="5dp"
    app:cardCornerRadius="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/bk7">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/result_title_sob"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:paddingLeft="10sp"
                android:text="@string/post_title_row"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_desc_sob"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:text="@string/Description_row" />

            <TextView
                android:id="@+id/result_download_sob"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:text="Download" />


            <TextView
                android:id="@+id/timestampList"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10sp"
                android:text="@string/date_created_row"
                android:textStyle="italic" />


        </LinearLayout>

    </RelativeLayout>

    </androidx.cardview.widget.CardView>

