<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateAccount.VerifyOTP">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="@color/black"
            android:padding="5dp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textSize="90dp"
            android:fontFamily="@font/baloo"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_verification"
            android:textSize="30dp"
            android:fontFamily="@font/baloo"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:paddingTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_desc"
            android:textSize="20dp"
            android:gravity="center"
            android:fontFamily="@font/baloo"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        
        
        <com.chaos.view.PinView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            app:lineColor="@color/colorAccent"
            android:itemBackground="@color/lightWhite"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"
            />
        
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="Verify Code"
            android:textColor="@color/black"


            />


        <ProgressBar
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progressBar_verifyphoneno"/>




    </LinearLayout>

</ScrollView>